--- a/tailwindcss-coffee/src/input.css
+++ b/tailwindcss-coffee/src/input.css
@@ -8,7 +8,7 @@
 }
 
 .top-menu-item {
-  @apply cursor-pointer py-1 hover:text-gray-800 relative after:lg:absolute after:lg:bottom-0 after:lg:left-0 after:lg:bg-light-coffee after:lg:h-0.5 after:lg:w-0 hover:after:lg:w-full after:lg:transition-all after:lg:ease-in-out after:lg:duration-300;
+  @apply cursor-pointer py-1 hover:text-gray-800 relative after:lg:absolute after:lg:bottom-0 after:lg:left-0 after:lg:bg-coffee-200 after:lg:h-0.5 after:lg:w-0 hover:after:lg:w-full after:lg:transition-all after:lg:ease-in-out after:lg:duration-300;
 }
 
 .top-menu-item-active {
@@ -20,4 +20,16 @@
 }
 .ct-circle {
   @apply text-xs text-center rounded-full px-1.5;
+}
+
+.ct-subheadline {
+  @apply flex justify-center items-center mb-[100px];
+}
+
+.ct-subheadline-deco-line {
+  @apply w-8 h-px bg-gray-200;
+}
+
+.ct-subheadline-label {
+  @apply uppercase mx-4 tracking-widest text-gray-500 font-medium text-[14px] text-center;
 }
